hphp/hack/test/typecheck/new_inference/unresolved_errors.php.exp
File "unresolved_errors.php", line 16, characters 3-7:
Was expecting an object but type is unknown (Typing[4297])
File "unresolved_errors.php", line 15, characters 8-13:
It is unknown because type parameter Tv of Map could not be determined. Please add type parameters to Map.
File "unresolved_errors.php", line 19, characters 3-7:
Was expecting an object but type is unknown (Typing[4297])
File "unresolved_errors.php", line 18, characters 8-16:
It is unknown because type parameter T of Vector could not be determined. Please add type parameters to Vector.
File "unresolved_errors.php", line 22, characters 3-7:
Was expecting an object but type is unknown (Typing[4297])
File "unresolved_errors.php", line 21, characters 8-23:
It is unknown because type parameter T of generic_function could not be determined. Please add type parameters to generic_function.
File "unresolved_errors.php", line 4, characters 40-40:
  via this generic T
File "unresolved_errors.php", line 28, characters 3-11:
Was expecting an object but type is unknown (Typing[4297])
File "unresolved_errors.php", line 27, characters 12-14:
It is unknown because type parameter Ti of Inv could not be determined. Please add type parameters to Inv.
File "unresolved_errors.php", line 11, characters 25-26:
  via this generic Ti
